# tyl-qdrant-adapter

./: CLAUDE.md  Cargo.toml  README.md  clippy.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cross-platform.yml  dependabot.yml  release.yml
examples/: advanced_filtering.rs  basic_usage.rs  docker_testing.rs  migration_example.rs  test_api.rs
src/: lib.rs  migration.rs  mock.rs
tests/: docker_integration_tests.rs  integration_tests.rs  migration_tests.rs
