[package]
name = "tyl-qdrant-adapter"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-qdrant-adapter"
description = "Qdrant vector database adapter for TYL framework - integrates Qdrant with TYL vector and embeddings ports"
homepage = "https://github.com/the-yaml-life/tyl-qdrant-adapter"
documentation = "https://docs.rs/tyl-qdrant-adapter"
readme = "README.md"
keywords = ["qdrant", "vector-database", "embeddings", "hexagonal-architecture", "rust", "tyl-framework"]
categories = ["database", "development-tools", "rust-patterns"]

[dependencies]
# TYL Framework dependencies - using main branch for easy maintenance
tyl-errors = { git = "https://github.com/the-yaml-life/tyl-errors.git", branch = "main" }
tyl-config = { git = "https://github.com/the-yaml-life/tyl-config.git", branch = "main" }
tyl-logging = { git = "https://github.com/the-yaml-life/tyl-logging.git", branch = "main" }
tyl-tracing = { git = "https://github.com/the-yaml-life/tyl-tracing.git", branch = "main" }
tyl-db-core = { git = "https://github.com/the-yaml-life/tyl-db-core.git", branch = "main" }
tyl-vector-port = { git = "https://github.com/the-yaml-life/tyl-vector-port.git", branch = "main" }
tyl-embeddings-port = { git = "https://github.com/the-yaml-life/tyl-embeddings-port.git", branch = "main" }

# Core dependencies
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Qdrant specific
qdrant-client = "1.15"
# For Docker integration example
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
# Schema migration and validation
pact_consumer = { version = "1.0", optional = true }
pact_models = { version = "1.0", optional = true }
semver = { version = "1.0", features = ["serde"] }
tempfile = { version = "3.0", optional = true }

[dev-dependencies]
# Development dependencies for testing
tokio-test = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["mock"]
mock = []
docker-testing = ["reqwest"]
schema-migration = ["pact_consumer", "pact_models", "tempfile"]